<resources>
    <string name="app_name">Testproj</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="CECV">社区老人志愿汇</string>
    <string name="input_account">输入用户名或邮箱</string>
    <string name="input_password">输入密码</string>
    <string name="input_password_again">再次输入密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="click_register">点击注册</string>
    <string name="login">登录</string>
    <string name="nickname">昵称</string>
    <string name="declaration">公益宣言</string>
    <string name="gender">性别</string>
    <string name="phone">手机号码</string>
    <string name="id">志愿者编号</string>
    <string name="deadline">截止时间</string>
    <string name="number">招募人数</string>
    <string name="register_account">注册账号</string>
    <string name="register_by_email">通过邮箱注册</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>