<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/gray0">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <Button
            android:id="@+id/personal_info_back"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/back"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"></Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="10dp"
            android:text="编辑资料"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="@color/gray0"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/nickname"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <LinearLayout
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:text="测试用户"
                android:id="@+id/user_name"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:background="@color/gray0"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/declaration"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <LinearLayout
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <EditText
                android:hint="请输入"
                android:enabled="false"
                android:background="@null"
                android:id="@+id/user_declaration"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/edit_declaration"
                android:text="编辑"
                android:textSize="18sp"
                android:textColor="@color/theme3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:background="@color/gray0"
        android:layout_width="match_parent"
        android:layout_height="12dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <LinearLayout
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <EditText
                android:hint="请选择"
                android:enabled="false"
                android:background="@null"
                android:id="@+id/user_gender"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/gender_choice"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/choice"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"></Button>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:background="@color/gray0"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <LinearLayout
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <EditText
                android:hint="请输入"
                android:enabled="false"
                android:background="@null"
                android:id="@+id/user_phone"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/edit_phone"
                android:text="编辑"
                android:textSize="18sp"
                android:textColor="@color/theme3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:background="@color/gray0"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/id"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <LinearLayout
            android:layout_marginRight="20dp"
            android:layout_alignParentRight="true"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:text="202205556735"
                android:id="@+id/user_id"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>